-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7.3, 6.8.0 RC
-
None
-
-
e829737e6 (dev), 067dcda60 (6.8), 0c1da9def (tqtc/lts-6.5)
-
Multimedia wk 39-40
This doesn't depend on multimedia backend, can be reproduced with "windows", "darwin", "ffmpeg".
Can be reproduced with standard Audio Recorder Example (qtmultimedia/examples/multimedia/audiorecorder).
Steps to reproduce:
1. Build and run standard Audio Recorder Example
2. Select File Container as "MPEG-4 Audio"
3. Select any Output file with "m4a" extension (e.g. test.m4a)
4. Record some audio
5. Check the actually recorded file
Actual results: file with m4a.mp4a extension has been recorded (e.g. test.m4a.mp4a).
Expected results: Requested output file extension should be preserved (it should be m4a in such case).
Note: there was no such problem on Qt 6.7.2 and before, at least with "windows" and "darwin" backends.